--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="silver">#c0c0c0</color><!--银色 -->
     <color name="white">#ffffffff</color>
     <color name="black">#ff000000</color>
     <color name="green">#ff00ff00</color>
